--- a/index.html
+++ b/index.html
@@ -62,12 +62,12 @@
                 <div class="w-1/3 relative">
                     <svg class="absolute right-0 top-1/2 -translate-y-1/2 w-full h-auto" viewBox="0 0 330 330" version="1.1">
                         <g fill-rule="evenodd">
-                            <path id="morphing-shape-1" 
+                            <path id="morphing-shape-1" class="transition-ease-07"
                                 fill="#048A81"
                                 opacity="0.5"
                                 d="M160,50 C240,50 300,90 300,177 C300,264 240,304 160,304 C80,304 20,264 20,177 C20,90 80,50 160,50">
                             </path>
-                            <path id="morphing-shape-2" 
+                            <path id="morphing-shape-2" class="transition-ease-07"
                                 fill="#FF3864"
                                 opacity="0.5"
                                 d="M160,50 C200,50 240,90 240,177 C240,264 200,304 160,304 C120,304 80,264 80,177 C80,90 120,50 160,50">
