Updates in brand

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title data-i18n="meta.title">AI Learning Lab | Practical AI Implementation</title>
+    <title data-i18n="meta.title">Bonsai | AI, gegrond in waarden</title>
     <link rel="stylesheet" href="/src/css/styles.css">
     <script type="module" src="/src/js/main.js"></script>
 
@@ -16,7 +16,7 @@
             <div class="flex justify-between h-16">
                 <div class="flex">
                     <a class="flex items-center text-2xl font-bold" href="/">
-                        <h2>AI Learning Lab</h2>
+                        <span class="font-bold" style="font-family: Outfit">Bonsai</span>
                     </a>
                 </div>
                 
@@ -63,14 +63,14 @@
                     <svg class="absolute right-0 top-1/2 -translate-y-1/2 w-full h-auto" viewBox="0 0 330 330" version="1.1">
                         <g fill-rule="evenodd">
                             <path id="morphing-shape-1" class="transition-ease-07"
-                                fill="#048A81"
+                                fill="var(--secondary-color)"
                                 opacity="0.5"
-                                d="M160,165 C170,165 180,160 185,155 C190,150 190,145 185,140 C180,135 170,130 160,130 C150,130 140,135 135,140 C130,145 130,150 135,155 C140,160 150,165 160,165 C170,165 180,160 185,155 C190,150 180,145 160,165">
+                                d="M 254 44 C 272 64 280 70 300 120 C 320 170 310 220 280 260 C 250 300 200 304 160 284 C 120 264 80 240 60 200 C 40 160 40 120 60 80 C 80 40 87 40 121 24 C 150 14 161 12 199 16 C 216 18 234 29 254 44">
                             </path>
                             <path id="morphing-shape-2" class="transition-ease-07"
-                                fill="#FF3864"
+                                fill="var(--accent-color)"
                                 opacity="0.5"
-                                d="M160,155 C170,155 180,150 185,145 C190,140 190,135 185,130 C180,125 170,120 160,120 C150,120 140,125 135,130 C130,135 130,140 135,145 C140,150 150,155 160,155 C170,155 180,150 185,145 C190,140 180,135 160,155">
+                                d="M 212 205 C 224 193 208 177 212 169 C 260 137 256 137 228 129 C 228 81 220 69 200 85 C 140 69 132 85 132 109 C 92 137 80 133 120 165 C 100 189 112 197 128 193 C 136 209 132 205 160 197 C 172 217 184 221 212 205">
                             </path>
                         </g>
                     </svg>
