Footer font to white

--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
     </div>
 
     <footer class="footer py-8 mt-12">
-        <div class="container mx-auto px-4 max-w-4xl">
+        <div class="container mx-auto px-4 max-w-4xl text-white">
             <div class="grid md:grid-cols-3 gap-8">
                 <div>
                     <h3 class="text-lg font-semibold mb-4">AI Learning Lab</h3>
@@ -236,9 +236,6 @@
                         </a>
                     </div>
                 </div>
-            </div>
-            <div class="mt-8 pt-8 border-t border-gray-800 text-center text-gray-400">
-                <p>&copy; 2025 AI Learning Lab. All rights reserved.</p>
             </div>
         </div>
     </footer>
