Add morphing svgs

--- a/index.html
+++ b/index.html
@@ -80,20 +80,10 @@
                     <div class="w-full md:w-2/3 z-10">
                         <h1 class="font-bold mb-4 text-left text-4xl md:text-6xl" data-i18n="header.title"></h1>
                     </div>
-                    <div class="w-full md:w-1/3 relative">
-                        <svg class="md:absolute md:right-0 md:top-1/2 -translate-y-1/4 md:-translate-y-1/2 z-0 w-full h-auto"
-                            viewBox="0 0 330 330" version="1.1">
-                            <g fill-rule="evenodd">
-                                <path id="morphing-shape-1" class="transition-ease-07" fill="var(--secondary-color)"
-                                    opacity="0.5"
-                                    d="M 254 44 C 272 64 280 70 300 120 C 320 170 310 220 280 260 C 250 300 200 304 160 284 C 120 264 80 240 60 200 C 40 160 40 120 60 80 C 80 40 87 40 121 24 C 150 14 161 12 199 16 C 216 18 234 29 254 44">
-                                </path>
-                                <path id="morphing-shape-2" class="transition-ease-07" fill="var(--accent-color)"
-                                    opacity="0.5"
-                                    d="M 212 205 C 224 193 208 177 212 169 C 260 137 256 137 228 129 C 228 81 220 69 200 85 C 140 69 132 85 132 109 C 92 137 80 133 120 165 C 100 189 112 197 128 193 C 136 209 132 205 160 197 C 172 217 184 221 212 205">
-                                </path>
-                            </g>
-                        </svg>
+                    <div class="w-1/3 relative">
+                        <div id="bonsai-container" class="">
+                            <!-- SVG will be inserted here by JavaScript -->
+                        </div>
                     </div>
                 </div>
                 <div class="flex">
@@ -104,7 +94,7 @@
                             Contact us
                         </button>
                     </a>
-                </div>
+                </div>          
             </div>
         </div>
 
