--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                     <div class="w-full md:w-2/3 z-10">
                         <h1 class="font-bold mb-4 text-left text-4xl md:text-6xl" data-i18n="header.title"></h1>
                     </div>
-                    <div class="w-1/3 relative">
+                    <div class="w-full my-10 md:my-0 md:w-1/3">
                         <div id="bonsai-container" class="">
                             <!-- SVG will be inserted here by JavaScript -->
                         </div>
