feat: Add team section with facilitator details and styling

--- a/index.html
+++ b/index.html
@@ -180,7 +180,23 @@
         <div id="who" class="w-full mb-16">
             <div class="bg-white p-8 md:p-16 rounded-3xl">
                 <h2 class="text-3xl font-bold mb-6 section-title" data-i18n="team.title"></h2>
-                <p class="text-xl" data-i18n="team.description"></p>
+                <p class="text-xl mb-8" data-i18n="team.description"></p>
+                
+                <div class="grid md:grid-cols-2 gap-8 mb-8">
+                    <div class="bg-[var(--background-color)] p-6 rounded-lg">
+                        <h3 class="text-2xl font-bold mb-3" data-i18n="team.kamiel.name"></h3>
+                        <p class="text-lg" data-i18n="team.kamiel.description"></p>
+                    </div>
+                    <div class="bg-[var(--background-color)] p-6 rounded-lg">
+                        <h3 class="text-2xl font-bold mb-3" data-i18n="team.sytze.name"></h3>
+                        <p class="text-lg" data-i18n="team.sytze.description"></p>
+                    </div>
+                </div>
+                
+                <div class="bg-[var(--background-color-2)] p-6 rounded-lg">
+                    <h3 class="text-2xl font-bold mb-3" data-i18n="team.binding.title"></h3>
+                    <p class="text-lg" data-i18n="team.binding.description"></p>
+                </div>
             </div>
         </div>
 
