--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 </div>
 
                 <!-- Mobile menu button -->
-                <div class="flex items-center -mr-2 sm:hidden">
+                <div class="flex items-center -mr-2 lg:hidden">
                     <button @click="isOpen = !isOpen"
                         class="inline-flex items-center justify-center p-2 rounded-md text-gray-400  hover:bg-gray-700 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-white">
                         <span class="sr-only">Open main menu</span>
@@ -40,7 +40,7 @@
                 </div>
 
                 <!-- Desktop menu -->
-                <div class="hidden sm:flex sm:items-center sm:ml-6 ">
+                <div class="hidden lg:flex lg:items-center lg:ml-6 ">
                     <div class="flex space-x-4 items-center">
                         <a href="#why" data-i18n="nav.why"
                             class="px-3 py-2 rounded-md text-sm border-transparent border font-medium hover:border-gray-700 hover:border-1">Why</a>
@@ -62,13 +62,16 @@
             </div>
 
             <!-- Mobile menu -->
-            <div x-show="isOpen" class="sm:hidden">
-                <div class="px-2 pt-2 pb-3 space-y-1">
-                    <a href="#what-we-do"
-                        class="block px-3 py-2 rounded-md text-base font-medium hover:text-white hover:bg-gray-700">What
-                        We Do</a>
+            <div x-show="isOpen" class="lg:hidden">
+                <div class="flex flex-col px-2 pt-2 pb-3 space-y-1">
+                    <a href="#why" data-i18n="nav.why"
+                            class="px-3 py-2 rounded-md text-sm border-transparent border font-medium hover:border-gray-700 hover:border-1">Why</a>
+                    <a href="#approach" data-i18n="nav.approach"
+                        class="px-3 py-2 rounded-md text-sm border-transparent border font-medium hover:border-gray-700 hover:border-1">Approach</a>
+                    <a href="#who" data-i18n="nav.who"
+                        class="px-3 py-2 rounded-md text-sm border-transparent border font-medium hover:border-gray-700 hover:border-1">Who</a>
                     <a href="#contact"
-                        class="block px-3 py-2 rounded-md text-base font-medium hover:text-white hover:bg-gray-700">Contact</a>
+                        class="px-3 py-2 rounded-md text-sm border-transparent border font-medium hover:border-gray-700 hover:border">Contact</a>
                 </div>
             </div>
         </div>
@@ -78,26 +81,27 @@
         <!-- Title Section -->
         <div id="section-title" class="w-full md:mt-20">
             <div
-                class="bg-[var(--background-color-2)] p-8 md:p-16 rounded-3xl mb-12 flex flex-col justify-between lg:min-h-[500px]">
+                class="bg-[var(--background-color-2)] rounded-3xl mb-12 flex justify-between lg:min-h-[500px]"
+            >
                 <div class="flex flex-col md:flex-row">
-                    <div class="w-full md:w-2/3 z-10">
+                    <div class="flex flex-col justify-between p-8 md:p-16 w-full md:w-2/3 z-10">
                         <h1 class="font-bold mb-4 text-left text-4xl md:text-6xl" data-i18n="header.title"></h1>
+                        <div class="flex">
+                            <a href="#contact">
+                                <button
+                                    class="w-full bg-[var(--accent-color)] text-white px-6 py-4 rounded-lg hover:bg-[var(--secondary-color)] transition-colors font-medium text-lg"
+                                    data-i18n="header.contact-us">
+                                    Contact us
+                                </button>
+                            </a>
+                        </div>
                     </div>
-                    <div class="w-full my-10 md:my-0 md:w-1/3">
+                    <div class="w-full flex flex-col justify-end my-10 md:my-0 md:w-1/3">
                         <div id="bonsai-container" class="">
                             <!-- SVG will be inserted here by JavaScript -->
                         </div>
                     </div>
                 </div>
-                <div class="flex">
-                    <a href="#contact">
-                        <button
-                            class="w-full bg-[var(--accent-color)] text-white px-6 py-4 rounded-lg hover:bg-[var(--secondary-color)] transition-colors font-medium text-lg"
-                            data-i18n="header.contact-us">
-                            Contact us
-                        </button>
-                    </a>
-                </div>          
             </div>
         </div>
 
