--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
             >
                 <div class="flex flex-col md:flex-row">
                     <div class="flex flex-col justify-between p-8 md:p-16 w-full md:w-2/3 z-10">
-                        <h1 class="font-bold mb-4 text-left text-4xl md:text-6xl" data-i18n="header.title"></h1>
-                        <div class="flex">
+                        <h1 class="font-bold mb-8 text-left text-5xl md:text-6xl" data-i18n="header.title"></h1>
+                        <div class="flex justify-center md:justify-start">
                             <a href="#contact">
                                 <button
                                     class="w-full bg-[var(--accent-color)] text-white px-6 py-4 rounded-lg hover:bg-[var(--secondary-color)] transition-colors font-medium text-lg"
@@ -96,8 +96,8 @@
                             </a>
                         </div>
                     </div>
-                    <div class="w-full flex flex-col justify-end my-10 md:my-0 md:w-1/3">
-                        <div id="bonsai-container" class="">
+                    <div class="w-full flex flex-col justify-end md:w-1/3 relative">
+                        <div id="bonsai-container" class="md:absolute right-0 md:right-2">
                             <!-- SVG will be inserted here by JavaScript -->
                         </div>
                     </div>
