--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                         <div class="flex justify-center md:justify-start">
                             <a href="#contact">
                                 <button
-                                    class="w-full bg-[var(--accent-color)] text-white px-6 py-4 rounded-lg hover:bg-[var(--secondary-color)] transition-colors font-medium text-lg"
+                                    class="w-full bg-[var(--accent-color-1-dark)] text-white px-6 py-4 rounded-lg hover:bg-[var(--secondary-color)] transition-colors font-medium text-lg"
                                     data-i18n="header.contact-us">
                                     Contact us
                                 </button>
@@ -149,7 +149,7 @@
                             </ul>
                         </div>
                     </div>
-                    <div class="p-3 bg-[var(--accent-color)] rounded-xl">
+                    <div class="p-3 bg-[var(--accent-color-1)] rounded-xl">
                         <div class="p-6 bg-white rounded-lg h-full">
                             <h4 class="text-xl font-bold mb-3" data-i18n="approach.modules.promptTraining.title"></h4>
                             <p data-i18n="approach.modules.promptTraining.description"></p>
@@ -185,7 +185,7 @@
                 <div class="grid md:grid-cols-2 gap-8 mb-8">
                     <div class="bg-[var(--background-color)] p-6 rounded-lg">
                         <h3 class="text-2xl font-bold mb-3">
-                            <a href="#" data-i18n-href="team.facilitators.kamiel.linkedin" class="hover:text-[var(--accent-color)] transition-colors" id="kamiel-linkedin">
+                            <a href="#" data-i18n-href="team.facilitators.kamiel.linkedin" class="hover:text-[var(--accent-color-1-dark)] transition-colors flex items-center" id="kamiel-linkedin">
                                 <span data-i18n="team.facilitators.kamiel.name"></span>
                                 <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 inline-block ml-2" fill="currentColor" viewBox="0 0 24 24">
                                     <path d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z"/>
@@ -196,7 +196,7 @@
                     </div>
                     <div class="bg-[var(--background-color)] p-6 rounded-lg">
                         <h3 class="text-2xl font-bold mb-3">
-                            <a href="#" data-i18n-href="team.facilitators.sytze.linkedin" class="hover:text-[var(--accent-color)] transition-colors" id="sytze-linkedin">
+                            <a href="#" data-i18n-href="team.facilitators.sytze.linkedin" class="hover:text-[var(--accent-color-1-dark)] transition-colors flex items-center" id="sytze-linkedin">
                                 <span data-i18n="team.facilitators.sytze.name"></span>
                                 <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 inline-block ml-2" fill="currentColor" viewBox="0 0 24 24">
                                     <path d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z"/>
@@ -234,7 +234,7 @@
                                 class="w-full px-4 py-3 rounded-lg bg-[var(--background-color)] border-2 border-transparent focus:border-[var(--secondary-color)] transition-colors"></textarea>
                         </div>
                         <button type="submit"
-                            class="w-full bg-[var(--accent-color)] text-white px-6 py-4 rounded-lg hover:bg-[var(--secondary-color)] transition-colors font-medium text-lg">
+                            class="w-full bg-[var(--accent-color-1-dark)] text-white px-6 py-4 rounded-lg hover:bg-[var(--secondary-color)] transition-colors font-medium text-lg">
                             Send Message
                         </button>
                         <div id="formSuccessMessage" class="italic hidden" data-i18n="contact.success"></div>
