--- a/index.html
+++ b/index.html
@@ -181,29 +181,33 @@
             <div class="bg-white p-8 md:p-16 rounded-3xl">
                 <h2 class="text-3xl font-bold mb-6 section-title" data-i18n="team.title"></h2>
                 <p class="text-xl mb-8" data-i18n="team.description"></p>
-                
-                <div class="grid md:grid-cols-2 gap-8 mb-8">
-                    <div class="bg-[var(--background-color)] p-6 rounded-lg">
-                        <h3 class="text-2xl font-bold mb-3">
-                            <a href="#" data-i18n-href="team.facilitators.kamiel.linkedin" class="hover:text-[var(--accent-color-1-dark)] transition-colors flex items-center" id="kamiel-linkedin">
-                                <span data-i18n="team.facilitators.kamiel.name"></span>
-                                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 inline-block ml-2" fill="currentColor" viewBox="0 0 24 24">
-                                    <path d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z"/>
-                                </svg>
-                            </a>
-                        </h3>
-                        <p class="text-lg" data-i18n="team.facilitators.kamiel.bio"></p>
+                <div class="flex flex-col space-y-5 space-x-0 md:flex-row md:space-y-0 md:space-x-5">
+                    <div class="flex flex-col w-full md:w-1/2 space-y-5">
+                        <div class="flex-grow bg-[var(--background-color)] p-6 rounded-lg">
+                            <h3 class="text-2xl font-bold mb-3">
+                                <a href="#" data-i18n-href="team.facilitators.kamiel.linkedin" class="hover:text-[var(--accent-color-1-dark)] transition-colors flex items-center" id="kamiel-linkedin">
+                                    <span data-i18n="team.facilitators.kamiel.name"></span>
+                                    <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 inline-block ml-2" fill="currentColor" viewBox="0 0 24 24">
+                                        <path d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z"/>
+                                    </svg>
+                                </a>
+                            </h3>
+                            <p class="text-lg" data-i18n="team.facilitators.kamiel.bio"></p>
+                        </div>
+                        <div class="flex-grow bg-[var(--background-color)] p-6 rounded-lg">
+                            <h3 class="text-2xl font-bold mb-3">
+                                <a href="#" data-i18n-href="team.facilitators.sytze.linkedin" class="hover:text-[var(--accent-color-1-dark)] transition-colors flex items-center" id="sytze-linkedin">
+                                    <span data-i18n="team.facilitators.sytze.name"></span>
+                                    <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 inline-block ml-2" fill="currentColor" viewBox="0 0 24 24">
+                                        <path d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z"/>
+                                    </svg>
+                                </a>
+                            </h3>
+                            <p class="text-lg" data-i18n="team.facilitators.sytze.bio"></p>
+                        </div>
                     </div>
-                    <div class="bg-[var(--background-color)] p-6 rounded-lg">
-                        <h3 class="text-2xl font-bold mb-3">
-                            <a href="#" data-i18n-href="team.facilitators.sytze.linkedin" class="hover:text-[var(--accent-color-1-dark)] transition-colors flex items-center" id="sytze-linkedin">
-                                <span data-i18n="team.facilitators.sytze.name"></span>
-                                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 inline-block ml-2" fill="currentColor" viewBox="0 0 24 24">
-                                    <path d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z"/>
-                                </svg>
-                            </a>
-                        </h3>
-                        <p class="text-lg" data-i18n="team.facilitators.sytze.bio"></p>
+                    <div class="flex justify-center w-full md:w-1/2">
+                        <img src="/src/img/kamiel_sytze.png" alt="Kamiel en Sytze" class="w-full rounded-lg object-cover">
                     </div>
                 </div>
             </div>
