--- a/index.html
+++ b/index.html
@@ -7,7 +7,21 @@
     <title data-i18n="meta.title">Bonsai | AI, geworteld in waarden</title>
     <link rel="stylesheet" href="/src/css/styles.css">
     <script type="module" src="/src/js/main.js"></script>
-
+    <!-- icon -->
+    <link rel="icon" href="/src/img/favicon.ico" type="image/x-icon">
+    
+    <!-- SEO Meta Tags -->
+    <meta name="description" content="Bonsai - AI, geworteld in waarden. AI verandert onze wereld in een ongekend tempo. Als organisatie wil je meebewegen, maar niet ten koste van je waarden en visie. Big-tech suggereert dat hun weg de enige weg is - maar er zijn sterke alternatieven en wij weten dat het anders kan. Bonsai helpt je bij het implementeren van AI-oplossingen waarbij jij aan het roer blijft. Als autonome organisatie kies je voor open oplossingen en neem je zelf verantwoordelijkheid voor de toekomst van AI.">
+    <meta name="keywords" content="Bonsai, AI, ethical AI, ethische AI, verantwoorde AI, AI duurzaamheid, AI advies, AI cursus, prompt training, AI training">
+    <meta name="author" content="Bonsai Team">
+    <meta property="og:title" content="Bonsai | AI, geworteld in waarden">
+    <meta property="og:description" content="Bonsai - AI, geworteld in waarden. AI verandert onze wereld in een ongekend tempo. Als organisatie wil je meebewegen, maar niet ten koste van je waarden en visie. Big-tech suggereert dat hun weg de enige weg is - maar er zijn sterke alternatieven en wij weten dat het anders kan. Bonsai helpt je bij het implementeren van AI-oplossingen waarbij jij aan het roer blijft. Als autonome organisatie kies je voor open oplossingen en neem je zelf verantwoordelijkheid voor de toekomst van AI.">
+    <meta property="og:image" content="/src/img/bonsai_logo.png">
+    <meta property="og:url" content="https://www.bonsai-ai.nl">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Bonsai | AI, geworteld in waarden">
+    <meta name="twitter:description" content="Bonsai - AI, geworteld in waarden. AI verandert onze wereld in een ongekend tempo. Als organisatie wil je meebewegen, maar niet ten koste van je waarden en visie. Big-tech suggereert dat hun weg de enige weg is - maar er zijn sterke alternatieven en wij weten dat het anders kan. Bonsai helpt je bij het implementeren van AI-oplossingen waarbij jij aan het roer blijft. Als autonome organisatie kies je voor open oplossingen en neem je zelf verantwoordelijkheid voor de toekomst van AI.">
+    <meta name="twitter:image" content="/src/img/bonsai_logo.png">
 </head>
 
 <body class="gradient-bg min-h-screen">
@@ -16,8 +30,8 @@
             <div class="flex justify-between h-16">
                 <div class="flex">
                     <a class="flex items-center text-2xl font-bold" href="/">
-                                                    Bons<span class="text-[var(--secondary-color)]">ai</span>
-                                                </a>
+                        Bons<span class="text-[var(--secondary-color)]">ai</span>
+                    </a>
                 </div>
 
                 <!-- Mobile menu button -->
@@ -82,8 +96,8 @@
             >
                 <div class="flex flex-col md:flex-row w-full">
                     <div class="flex flex-col justify-between p-8 md:p-16 w-full md:w-2/3 z-10">
-<div>
-                        <h1 class="font-bold mb-4 text-left text-5xl md:text-6xl" data-i18n="header.slogan"></h1>
+                        <div>
+                            <h1 class="font-bold mb-4 text-left text-5xl md:text-6xl" data-i18n="header.slogan"></h1>
                             <p class="text-2xl md:text-3xl text-gray-700" data-i18n="header.title"></p>
                         </div>
                         <div class="flex justify-center md:justify-start">
@@ -253,7 +267,11 @@
         <div class="container mx-auto px-4 max-w-4xl text-white">
             <div class="grid md:grid-cols-3 gap-8">
                 <div>
-                    <h3 class="text-lg font-semibold mb-4" data-i18n="meta.name">Bonsai</h3>
+                    <div class="flex flex-row items-center mb-4">
+                        <h3 class="text-lg font-semibold" data-i18n="meta.name">Bonsai</h3>
+                        <!-- inline svg (white)-->
+                        <img src="/src/svg/bonsai_logo.svg" alt="Bonsai logo" class="h-6 w-6 ml-2 svg-white-filter">
+                    </div>
                     <p class="text-gray-400" data-i18n="header.slogan">AI, geworteld in waarden</p>
                 </div>
                 <div>
@@ -263,7 +281,7 @@
                 <div>
                     <h3 class="text-lg font-semibold mb-4" data-i18n="footer.followUs">Follow Us</h3>
                     <div class="flex space-x-4">
-                        <a href="https://www.linkedin.com/company/bons-ai-nl/" target="_blank" class="text-[#219ebc] hover:text-[#8ecae6]">
+                        <a href="https://www.linkedin.com/company/bons-ai-nl/" target="_blank" class="text-white hover:text-gray-400">
                             <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="currentColor" viewBox="0 0 24 24">
                                 <path d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z"/>
                             </svg>
