--- a/index.html
+++ b/index.html
@@ -153,9 +153,9 @@
                 <div class="mb-12">
                     <h3 class="text-2xl font-bold mb-6" data-i18n="approach.keyPoints.title"></h3>
                     <ul class="list-disc pl-6 space-y-4 text-lg">
-                        <li data-i18n="approach.keyPoints.point1"></li>
-                        <li data-i18n="approach.keyPoints.point2"></li>
-                        <li data-i18n="approach.keyPoints.point3"></li>
+                        <li data-i18n-html="approach.keyPoints.point1"></li>
+                        <li data-i18n-html="approach.keyPoints.point2"></li>
+                        <li data-i18n-html="approach.keyPoints.point3"></li>
                     </ul>
                 </div>
 
