Fix spacing in contact button in title section

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                             <h1 class="font-bold mb-4 text-left text-5xl md:text-6xl" data-i18n="header.slogan"></h1>
                             <p class="text-2xl md:text-3xl text-gray-700" data-i18n="header.title"></p>
                         </div>
-                        <div class="flex justify-center md:justify-start">
+                        <div class="flex justify-center mt-12 md:mt-5 lg:mt-0 md:justify-start">
                             <a href="#contact">
                                 <button
                                     class="w-full bg-[var(--accent-color-1-dark)] text-white px-6 py-4 rounded-lg hover:bg-[var(--secondary-color)] transition-colors font-medium text-lg"
