fix: Change image file extension from png to jpg

--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
                         </div>
                     </div>
                     <div class="flex justify-center w-full md:w-1/2">
-                        <img src="/src/img/kamiel_sytze.png" alt="Kamiel en Sytze" class="w-full rounded-lg object-cover">
+                        <img src="/src/img/kamiel_sytze.jpg" alt="Kamiel en Sytze" class="w-full rounded-lg object-cover">
                     </div>
                 </div>
             </div>
