--- a/index.html
+++ b/index.html
@@ -4,24 +4,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title data-i18n="meta.title">Bonsai | AI, geworteld in waarden</title>
+    <title data-i18n="meta.title">Enoki | AI, geworteld in waarden</title>
     <link rel="stylesheet" href="/src/css/styles.css">
     <script type="module" src="/src/js/main.js"></script>
     <!-- icon -->
     <link rel="icon" href="/src/img/favicon.ico" type="image/x-icon">
     
     <!-- SEO Meta Tags -->
-    <meta name="description" content="Bonsai - AI, geworteld in waarden. AI verandert onze wereld in een ongekend tempo. Als organisatie wil je meebewegen, maar niet ten koste van je waarden en visie. Big-tech suggereert dat hun weg de enige weg is - maar er zijn sterke alternatieven en wij weten dat het anders kan. Bonsai helpt je bij het implementeren van AI-oplossingen waarbij jij aan het roer blijft. Als autonome organisatie kies je voor open oplossingen en neem je zelf verantwoordelijkheid voor de toekomst van AI.">
-    <meta name="keywords" content="Bonsai, AI, ethical AI, ethische AI, verantwoorde AI, AI duurzaamheid, AI advies, AI cursus, prompt training, AI training">
-    <meta name="author" content="Bonsai Team">
-    <meta property="og:title" content="Bonsai | AI, geworteld in waarden">
-    <meta property="og:description" content="Bonsai - AI, geworteld in waarden. AI verandert onze wereld in een ongekend tempo. Als organisatie wil je meebewegen, maar niet ten koste van je waarden en visie. Big-tech suggereert dat hun weg de enige weg is - maar er zijn sterke alternatieven en wij weten dat het anders kan. Bonsai helpt je bij het implementeren van AI-oplossingen waarbij jij aan het roer blijft. Als autonome organisatie kies je voor open oplossingen en neem je zelf verantwoordelijkheid voor de toekomst van AI.">
-    <meta property="og:image" content="/src/img/bonsai_logo.png">
+    <meta name="description" content="Enoki - AI, geworteld in waarden. AI verandert onze wereld in een ongekend tempo. Als organisatie wil je meebewegen, maar niet ten koste van je waarden en visie. Big-tech suggereert dat hun weg de enige weg is - maar er zijn sterke alternatieven en wij weten dat het anders kan. Bonsai helpt je bij het implementeren van AI-oplossingen waarbij jij aan het roer blijft. Als autonome organisatie kies je voor open oplossingen en neem je zelf verantwoordelijkheid voor de toekomst van AI.">
+    <meta name="keywords" content="Enoki, AI, ethical AI, ethische AI, verantwoorde AI, AI duurzaamheid, AI advies, AI cursus, prompt training, AI training">
+    <meta name="author" content="Enoki Team">
+    <meta property="og:title" content="Enoki | AI, geworteld in waarden">
+    <meta property="og:description" content="Enoki - AI, geworteld in waarden. AI verandert onze wereld in een ongekend tempo. Als organisatie wil je meebewegen, maar niet ten koste van je waarden en visie. Big-tech suggereert dat hun weg de enige weg is - maar er zijn sterke alternatieven en wij weten dat het anders kan. Bonsai helpt je bij het implementeren van AI-oplossingen waarbij jij aan het roer blijft. Als autonome organisatie kies je voor open oplossingen en neem je zelf verantwoordelijkheid voor de toekomst van AI.">
+    <meta property="og:image" content="/src/img/enoki_logo.png">
     <meta property="og:url" content="https://www.bonsai-ai.nl">
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Bonsai | AI, geworteld in waarden">
-    <meta name="twitter:description" content="Bonsai - AI, geworteld in waarden. AI verandert onze wereld in een ongekend tempo. Als organisatie wil je meebewegen, maar niet ten koste van je waarden en visie. Big-tech suggereert dat hun weg de enige weg is - maar er zijn sterke alternatieven en wij weten dat het anders kan. Bonsai helpt je bij het implementeren van AI-oplossingen waarbij jij aan het roer blijft. Als autonome organisatie kies je voor open oplossingen en neem je zelf verantwoordelijkheid voor de toekomst van AI.">
-    <meta name="twitter:image" content="/src/img/bonsai_logo.png">
+    <meta name="twitter:title" content="Enoki | AI, verbonden in waarden">
+    <meta name="twitter:description" content="Enoki - AI, geworteld in waarden. AI verandert onze wereld in een ongekend tempo. Als organisatie wil je meebewegen, maar niet ten koste van je waarden en visie. Big-tech suggereert dat hun weg de enige weg is - maar er zijn sterke alternatieven en wij weten dat het anders kan. Enoki helpt je bij het implementeren van AI-oplossingen waarbij jij aan het roer blijft. Als autonome organisatie kies je voor open oplossingen en neem je zelf verantwoordelijkheid voor de toekomst van AI.">
+    <meta name="twitter:image" content="/src/img/enoki_logo.png">
 </head>
 
 <body class="gradient-bg min-h-screen">
@@ -29,8 +29,9 @@
         <div class="max-w-[1500px] mx-auto px-4">
             <div class="flex justify-between h-16">
                 <div class="flex">
+                    <!-- Logo -->
                     <a class="flex items-center text-2xl font-bold" href="/">
-                        Bons<span class="text-[var(--secondary-color)]">ai</span>
+                        Eno<span class="text-[var(--secondary-color)]">ki</span>
                     </a>
                 </div>
 
@@ -128,29 +129,14 @@
                 <h3 class="text-2xl font-bold mb-6 text-center" data-i18n="mission.values.title"></h3>
                 <div class="grid lg:grid-cols-3 gap-8">
                     <div class="p-6 bg-[var(--background-color)] rounded-lg flex flex-col h-full">
-                        <div class="flex justify-center mb-4">
-                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="white" class="w-12 h-12 p-2 rounded-full bg-[var(--accent-color-1-dark)]">
-                                <path fill-rule="evenodd" d="M12.516 2.17a.75.75 0 00-1.032 0 11.209 11.209 0 01-7.877 3.08.75.75 0 00-.722.515A12.74 12.74 0 002.25 9.75c0 5.942 4.064 10.933 9.563 12.348a.75.75 0 00.374 0c5.499-1.415 9.563-6.406 9.563-12.348 0-1.39-.223-2.73-.635-3.985a.75.75 0 00-.722-.516l-.143.001c-2.996 0-5.717-1.17-7.734-3.08zm3.094 8.016a.75.75 0 10-1.22-.872l-3.236 4.53L9.53 12.22a.75.75 0 00-1.06 1.06l2.25 2.25a.75.75 0 001.14-.094l3.75-5.25z" clip-rule="evenodd" />
-                            </svg>
-                        </div>
                         <h4 class="text-xl font-bold mb-3 text-center" data-i18n="mission.values.openPrivate.title"></h4>
                         <p class="text-center flex-grow flex items-center justify-center" data-i18n="mission.values.openPrivate.description"></p>
                     </div>
                     <div class="p-6 bg-[var(--background-color)] rounded-lg flex flex-col h-full">
-                        <div class="flex justify-center mb-4">
-                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="white" class="w-12 h-12 p-2 rounded-full bg-[var(--accent-color-1-dark)]">
-                                <path fill-rule="evenodd" d="M11.54 22.351l.07.04.028.016a.76.76 0 00.723 0l.028-.015.071-.041a16.975 16.975 0 001.144-.742 19.58 19.58 0 002.683-2.282c1.944-1.99 3.963-4.98 3.963-8.827a8.25 8.25 0 00-16.5 0c0 3.846 2.02 6.837 3.963 8.827a19.58 19.58 0 002.682 2.282 16.975 16.975 0 001.145.742zM12 13.5a3 3 0 100-6 3 3 0 000 6z" clip-rule="evenodd" />
-                            </svg>
-                        </div>
                         <h4 class="text-xl font-bold mb-3 text-center" data-i18n="mission.values.autonomous.title"></h4>
                         <p class="text-center flex-grow flex items-center justify-center" data-i18n="mission.values.autonomous.description"></p>
                     </div>
                     <div class="p-6 bg-[var(--background-color)] rounded-lg flex flex-col h-full">
-                        <div class="flex justify-center mb-4">
-                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="white" class="w-12 h-12 p-2 rounded-full bg-[var(--accent-color-1-dark)]">
-                                <path d="M21.721 12.752a9.711 9.711 0 00-.945-5.003 12.754 12.754 0 01-4.339 2.708 18.991 18.991 0 01-.214 4.772 17.165 17.165 0 005.498-2.477zM14.634 15.55a17.324 17.324 0 00.332-4.647c-.952.227-1.945.347-2.966.347-1.021 0-2.014-.12-2.966-.347a17.515 17.515 0 00.332 4.647 17.385 17.385 0 005.268 0zM9.772 17.119a18.963 18.963 0 004.456 0A17.182 17.182 0 0112 21.724a17.18 17.18 0 01-2.228-4.605zM7.777 15.23a18.87 18.87 0 01-.214-4.774 12.753 12.753 0 01-4.34-2.708 9.711 9.711 0 00-.944 5.004 17.165 17.165 0 005.498 2.477zM21.356 14.752a9.765 9.765 0 01-7.478 6.817 18.64 18.64 0 001.988-4.718 18.627 18.627 0 005.49-2.098zM2.644 14.752c1.682.971 3.53 1.688 5.49 2.099a18.64 18.64 0 001.988 4.718 9.765 9.765 0 01-7.478-6.816zM13.878 2.43a9.755 9.755 0 016.116 3.986 11.267 11.267 0 01-3.746 2.504 18.63 18.63 0 00-2.37-6.49zM12 2.276a17.152 17.152 0 012.805 7.121c-.897.23-1.837.353-2.805.353-.968 0-1.908-.122-2.805-.353A17.151 17.151 0 0112 2.276zM10.122 2.43a18.629 18.629 0 00-2.37 6.49 11.266 11.266 0 01-3.746-2.504 9.754 9.754 0 016.116-3.985z" />
-                            </svg>
-                        </div>
                         <h4 class="text-xl font-bold mb-3 text-center" data-i18n="mission.values.responsible.title"></h4>
                         <p class="text-center flex-grow flex items-center justify-center" data-i18n="mission.values.responsible.description"></p>
                     </div>
@@ -294,7 +280,7 @@
             <div class="grid md:grid-cols-3 gap-8">
                 <div>
                     <div class="flex flex-row items-center mb-4">
-                        <h3 class="text-lg font-semibold" data-i18n="meta.name">Bonsai</h3>
+                        <h3 class="text-lg font-semibold" data-i18n="meta.name">Enoki</h3>
                         <!-- inline svg (white)-->
                         <img src="/src/svg/bonsai_logo.svg" alt="Bonsai logo" class="h-6 w-6 ml-2 svg-white-filter">
                     </div>
