--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <div class="flex justify-between h-16">
                 <div class="flex">
                     <!-- Logo -->
-                    <a class="text-white flex items-center text-2xl font-bold" href="/">
+                    <a class="text-white hover:text-white flex items-center text-2xl font-bold" href="/">
                         enoki
                         <img src="/src/img/enoki_logo.svg" style="margin-bottom: 8px" alt="Enoki logo" class="h-6 w-6 ml-2 svg-white-filter">
                     </a>
@@ -78,13 +78,13 @@
             <div x-show="isOpen" class="lg:hidden">
                 <div class="flex flex-col px-2 pt-2 pb-3 space-y-1">
                     <a href="#why" data-i18n="nav.why" @click="isOpen = !isOpen"
-                            class="px-3 py-2 rounded-md text-sm border-transparent border font-medium hover:border-gray-700">Why</a>
+                            class="text-white hover:text-[var(--accent-color-1-dark)] px-3 py-2 rounded-md text-sm border-transparent border font-medium">Why</a>
                     <!-- <a href="#approach" data-i18n="nav.approach" @click="isOpen = !isOpen"
                         class="px-3 py-2 rounded-md text-sm border-transparent border font-medium hover:border-gray-700">Approach</a> -->
                     <a href="#who" data-i18n="nav.who" @click="isOpen = !isOpen"
-                        class="px-3 py-2 rounded-md text-sm border-transparent border font-medium hover:border-gray-700">Who</a>
+                        class="text-white hover:text-[var(--accent-color-1-dark)] px-3 py-2 rounded-md text-sm border-transparent border font-medium">Who</a>
                     <a href="#contact" @click="isOpen = !isOpen"
-                        class="px-3 py-2 rounded-md text-sm border-transparent border font-medium hover:border-gray-700">Contact</a>
+                        class="text-white hover:text-[var(--accent-color-1-dark)] px-3 py-2 rounded-md text-sm border-transparent border font-medium">Contact</a>
                 </div>
             </div>
         </div>
