--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <div class="flex justify-between h-16">
                 <div class="flex">
                     <!-- Logo -->
-                    <a class="text-white hover:text-white flex items-center text-2xl font-bold" href="/">
+                    <a class="francois-one text-white hover:text-white flex items-center text-2xl font-bold" href="/">
                         enoki
                         <img src="/src/img/enoki_logo.svg" style="margin-bottom: 8px" alt="Enoki logo" class="h-6 w-6 ml-2 svg-white-filter">
                     </a>
